...
        app:layout_constraintBottom_toBottomOf="@id/profile_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_toolbar" />

    <!-- Profile Picture Container -->
    <androidx.cardview.widget.CardView
        android:id="@+id/profile_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="70dp"
        app:cardElevation="4dp"
...
        android:background="@drawable/rounded_background"
        android:clickable="true"

        android:focusable="true"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/signout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_user_button">

        <ImageView
...
